added the table in layout.html

--- a/layout.html
+++ b/layout.html
@@ -1,4 +1,86 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
 
+table, th, td{
+	border: 1px solid black;
+}
+p.italic {
+    font-style: italic;
+    font-weight: normal;	
+}
+p.normal {
+    font-style: normal;
+    font-weight: normal;
+}
+</style>
+</head>
+
+<body>
+
+<table border="1" style="width:100%">
+	<caption>Multiplication from 1 to 5</caption>
+	<thead>
+		<tr>
+    			<th>&nbsp;</th>
+    			<th>1</th>		
+    			<th>2</th>
+    			<th>3</th>
+    			<th>4</th>
+    			<th>5</th>
+  		</tr>
+	</thead>	
+	<tfoot>
+		<tr>
+			<td colspan = "2">footer 1</td>
+			<td colspan = "4">footer 2</td>
+		<tr>
+	</tfoot>
+	<tbody>
+		<tr>
+			<th bgcolor="LightGreen"><p class ="italic">1</p></th>
+			<td bgcolor="LightGreen"><font color="red">1</font></td>		
+			<td bgcolor="LightGreen">2</td>
+			<td bgcolor="LightGreen"><font color="blue">3</font></td>	
+			<td bgcolor="LightGreen">4</td>
+			<td bgcolor="LightGreen">5</td>
+		</tr>	
+      		<tr>
+			<th bgcolor="LightBlue"><p class ="italic">2</p></th>
+			<td bgcolor="LightBlue"><font color="red">2</font></td>		
+			<td bgcolor="LightBlue">4</td>
+			<td bgcolor="LightBlue"><font color="blue">6</font></td>	
+			<td bgcolor="LightBlue">8</td>
+			<td bgcolor="LightBlue">10</td>
+		</tr>
+		<tr>
+			<th bgcolor="LightGreen"><p class ="italic">3</p></th>
+			<td bgcolor="LightGreen"><font color="red">3</font></td>			
+			<td bgcolor="LightGreen">6</td>
+			<td bgcolor="LightGreen"><font color="blue">9</font></td>	
+			<td bgcolor="LightGreen">12</td>
+			<td bgcolor="LightGreen">15</td>
+		</tr>
+		<tr>
+			<th bgcolor="LightBlue"><p class ="italic">4</p></th>
+			<td bgcolor="LightBlue"><font color="red">4</font></td>		
+			<td bgcolor="LightBlue">8</td>
+			<td bgcolor="LightBlue"><font color="blue">12</font></td>	
+			<td bgcolor="LightBlue">16</td>
+			<td bgcolor="LightBlue">20</td>
+		</tr>
+		<tr>
+			<th bgcolor="LightGreen"><p class ="italic">5</p></th>
+			<td bgcolor="LightGreen"><font color="red">5</font></td>			
+			<td bgcolor="LightGreen">10</td>
+			<td bgcolor="LightGreen"><font color="blue">15</font></td>	
+			<td bgcolor="LightGreen">20</td>
+			<td bgcolor="LightGreen">25</td>
+		</tr>
+	</tbody>		
+</table>
+
+</body>
+</html>
 
