--- a/layout.html
+++ b/layout.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel ="stylesheet" type = "text/css" href = "style.css">
+</head>
 <style>
 
 table, th, td{
 	border: 1px solid black;
 }
-p.italic {
-    font-style: italic;
-    font-weight: normal;	
-}
-p.normal {
-    font-style: normal;
-    font-weight: normal;
-}
-</style>
-</head>
 
+</style>
 <body>
 
-<table border="1" style="width:100%">
+<table>
 	<caption>Multiplication from 1 to 5</caption>
 	<thead>
 		<tr>
@@ -38,48 +31,58 @@ p.normal {
 		<tr>
 	</tfoot>
 	<tbody>
-		<tr>
-			<th bgcolor="LightGreen"><p class ="italic">1</p></th>
-			<td bgcolor="LightGreen"><font color="red">1</font></td>		
-			<td bgcolor="LightGreen">2</td>
-			<td bgcolor="LightGreen"><font color="blue">3</font></td>	
-			<td bgcolor="LightGreen">4</td>
-			<td bgcolor="LightGreen">5</td>
+		<tr style = "background-color:LightGreen"> 
+			<th><p class ="italic">1</p></th>
+			<td><font color="red">1</font></td>		
+			<td>2</td>
+			<td><font color="blue">3</font></td>	
+			<td>4</td>
+			<td>5</td>
 		</tr>	
-      		<tr>
-			<th bgcolor="LightBlue"><p class ="italic">2</p></th>
-			<td bgcolor="LightBlue"><font color="red">2</font></td>		
-			<td bgcolor="LightBlue">4</td>
-			<td bgcolor="LightBlue"><font color="blue">6</font></td>	
-			<td bgcolor="LightBlue">8</td>
-			<td bgcolor="LightBlue">10</td>
+      		<tr style = "background-color:LightBlue">
+			<th><p class ="italic">2</p></th>
+			<td><font color="red">2</font></td>		
+			<td>4</td>
+			<td><font color="blue">6</font></td>	
+			<td>8</td>
+			<td>10</td>
 		</tr>
-		<tr>
-			<th bgcolor="LightGreen"><p class ="italic">3</p></th>
-			<td bgcolor="LightGreen"><font color="red">3</font></td>			
-			<td bgcolor="LightGreen">6</td>
-			<td bgcolor="LightGreen"><font color="blue">9</font></td>	
-			<td bgcolor="LightGreen">12</td>
-			<td bgcolor="LightGreen">15</td>
+		<tr style = "background-color:LightGreen">
+			<th><p class ="italic">3</p></th>
+			<td><font color="red">3</font></td>			
+			<td>6</td>
+			<td><font color="blue">9</font></td>	
+			<td>12</td>
+			<td>15</td>
 		</tr>
-		<tr>
-			<th bgcolor="LightBlue"><p class ="italic">4</p></th>
-			<td bgcolor="LightBlue"><font color="red">4</font></td>		
-			<td bgcolor="LightBlue">8</td>
-			<td bgcolor="LightBlue"><font color="blue">12</font></td>	
-			<td bgcolor="LightBlue">16</td>
-			<td bgcolor="LightBlue">20</td>
+		<tr style = "background-color:LightBlue">
+			<th><p class ="italic">4</p></th>
+			<td><font color="red">4</font></td>		
+			<td>8</td>
+			<td><font color="blue">12</font></td>	
+			<td>16</td>
+			<td>20</td>
 		</tr>
-		<tr>
-			<th bgcolor="LightGreen"><p class ="italic">5</p></th>
-			<td bgcolor="LightGreen"><font color="red">5</font></td>			
-			<td bgcolor="LightGreen">10</td>
-			<td bgcolor="LightGreen"><font color="blue">15</font></td>	
-			<td bgcolor="LightGreen">20</td>
-			<td bgcolor="LightGreen">25</td>
+		<tr style = "background-color:LightGreen">
+			<th><p class ="italic">5</p></th>
+			<td><font color="red">5</font></td>			
+			<td>10</td>
+			<td><font color="blue">15</font></td>	
+			<td>20</td>
+			<td>25</td>
 		</tr>
 	</tbody>		
 </table>
+
+
+<dl>
+	<dt class = "hello">Hello</dt>
+	<dd>Kitty</dd>	
+	<dt class = "calling">Calling</dt>
+	<dd>Mr.Bueler</dd>
+	<dt class = "go">Go</dt>
+	<dd>Badgers!</dd>
+</dl>	
 
 </body>
 </html>
