Added form functionality

--- a/layout.html
+++ b/layout.html
@@ -76,14 +76,42 @@ table, th, td{
 
 
 <dl>
-	<dt class = "hello">Hello</dt>
+	<dt>Hello</dt>
 	<dd>Kitty</dd>	
-	<dt class = "calling">Calling</dt>
+	<dt>Calling</dt>
 	<dd>Mr.Bueler</dd>
-	<dt class = "go">Go</dt>
+	<dt>Go</dt>
 	<dd>Badgers!</dd>
 </dl>	
 
+<form action = "http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method = "get">
+	<input type = "text" name = "text_input">
+	<input type = "number" name = "numerical_input">
+	<input type = "password" name = "password_input">
+	<br>
+	<input type = "radio" name = "candy" value = "Snickers">Snickers
+	<br>
+	<input type = "radio" name = "candy" value = "Skittles">Skittles	
+	<br>
+	<input type = "radio" name = "candy" value = "Mentos">Mentos
+	<br>
+	<input type = "submit">
+	<br>
+</form>	
+<form action = "http://web.engr.oregonstate.edu/~osterbit/2/repo/class-content/form_tests/Formtest.php" method = "post">
+	<input type = "text" name = "text_input">
+	<input type = "number" name = "numerical_input">
+	<input type = "password" name = "password_input">
+	<br>
+	<input type = "radio" name = "candy" value = "Snickers">Snickers
+	<br>
+	<input type = "radio" name = "candy" value = "Skittles">Skittles	
+	<br>
+	<input type = "radio" name = "candy" value = "Mentos">Mentos
+	<br>
+	<input type = "submit">
+</form>	
+	
 </body>
 </html>
 
