finished hw assignment

--- a/layout.html
+++ b/layout.html
@@ -111,7 +111,79 @@ table, th, td{
 	<br>
 	<input type = "submit">
 </form>	
-	
+
+<div class = "outer-content">
+	<div class = "inner-content">
+		<p> here is some content. </p>
+	</div>	
+</div>
+
+<p>
+<img src = "http://people.oregonstate.edu/~ruppd/Rupp%20website_files/OSU_logo.jpg" style = "width:100px;height:125px" align = "left">
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+</p>
+<p>
+la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la 
+la la la la la la la la la la la la la la
+</p>
+
+
 </body>
 </html>
 
